syntax = "proto3";

package internal;

option go_package = "internal/handlers";

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string userId = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message CreateRoomRequest {
  string room_name = 1;
}

message CreateRoomResponse {
  string room_id = 1;
}

message JoinRoomRequest {
  string user_id = 1;
  string room_id = 2;
}

message JoinRoomResponse {
  bool success = 1;
}

message ChatMessage {
  string user_id = 1;
  string message = 2;
}

message ChatWithUserMessage {
  string Sender = 1;
  string Receiver = 2;
  string Message = 3;
}

message Empty {}

service ChatAppService {
  rpc RegisterUser (RegisterRequest) returns (RegisterResponse) {}
  rpc LoginUser (LoginRequest) returns (LoginResponse) {}
  rpc CreateRoom (CreateRoomRequest) returns (CreateRoomResponse) {}
  rpc JoinRoom (JoinRoomRequest) returns (JoinRoomResponse) {}
  rpc ChatStream (stream ChatMessage) returns (stream ChatMessage) {}
  rpc ChatWithUserStream (stream ChatWithUserMessage) returns (stream ChatWithUserMessage) {}
}
